src/objects/Course_Account_Fees__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course_Account_Fees</relationshipLabel>
        <relationshipName>Course_Account_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course_Account</label>
        <referenceTo>Course_Account__c</referenceTo>
        <relationshipLabel>Course_Account_Fees</relationshipLabel>
        <relationshipName>Course_Account_Fees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Amount__c</fullName>
        <label>Course Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Balance__c</fullName>
        <formula>Total_Fees__c  -  Total_Fees_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Received__c</fullName>
        <label>Total Fees Received</label>
        <summarizedField>Student_Course__c.Received_Amount__c</summarizedField>
        <summaryForeignKey>Student_Course__c.Course_Account_Fees__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Fees__c</fullName>
        <formula>Total_No_of_Students__c  *  Course_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Students__c</fullName>
        <label>Total No of Students</label>
        <summaryForeignKey>Student_Course__c.Course_Account_Fees__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course_Account_Fees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course_Account_Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>